--- a/Rabbit.iOnline.Ioc.Autofac/packages.config
+++ b/Rabbit.iOnline.Ioc.Autofac/packages.config
@@ -9,5 +9,6 @@
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Rabbit.Configuration" version="1.0.1" targetFramework="net45" />
+  <package id="Rabbit.IOC" version="1.0.0-Beta2" targetFramework="net45" />
   <package id="RavenDB.Client" version="3.0.3785" targetFramework="net45" />
 </packages>
