--- a/Rabbit.iOnline.Ioc.SimpleInjector/Ioc.SimpleInjector.csproj
+++ b/Rabbit.iOnline.Ioc.SimpleInjector/Ioc.SimpleInjector.csproj
@@ -52,6 +52,10 @@
       <HintPath>..\packages\Rabbit.Configuration.1.0.1\lib\Rabbit.Configuration.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Rabbit.IOC, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rabbit.IOC.1.0.0-Beta2\lib\Rabbit.IOC.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Raven.Abstractions, Version=3.0.0.0, Culture=neutral, PublicKeyToken=37f41c7f99471593, processorArchitecture=MSIL">
       <HintPath>..\packages\RavenDB.Client.3.0.3785\lib\net45\Raven.Abstractions.dll</HintPath>
       <Private>True</Private>
